<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoosingThemeActivity">

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonRedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red_style" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMarineStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marine_style" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMidnightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/midnight_style" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_Return"
        app:cornerRadius="@dimen/buttonRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>